# neural_network

./: .gitignore  CMakeLists.txt  README.md  hello_world.cpp
src/: data.cpp  data.h  main.cpp
src/activation/: activation.cpp  activation.h  sigmoid.cpp  sigmoid.h
src/layer/: hiddenLayer.cpp  hiddenLayer.h  inputLayer.cpp  inputLayer.h  layer.cpp  layer.h
src/network/: multilayerPerceptron.cpp  multilayerPerceptron.h  network.cpp  network.h
src/neuron/: inputNeuron.cpp  inputNeuron.h  neuron.cpp  neuron.h  neuronBase.cpp  neuronBase.h
